--- a/src/App.css
+++ b/src/App.css
@@ -21,5 +21,6 @@
   fontFamily: "-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif";
   margin: "auto";
   maxWidth: "100px";
-  padding: "1em";    
+  padding: "1em"; 
+  align-items: center;   
 }
