--- a/src/App.css
+++ b/src/App.css
@@ -22,5 +22,6 @@
   margin: "auto";
   maxWidth: "100px";
   padding: "1em"; 
-  align-items: center;   
+  align-items: center; 
+  justify-content: center;  
 }
