--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
   color: #61dafb;
 }
 
-#App-table {
+.App-table {
   fontFamily: "-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif";
   margin: "auto";
   maxWidth: "100px";
