--- a/src/App.css
+++ b/src/App.css
@@ -7,19 +7,86 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(12px + 2vmin);
+  color: grey;
+}
+
+
+* {
+  box-sizing: border-box;
+}
+
+input[type=text],input[type=password], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
+}
+
+label {
+  padding: 12px 12px 12px 0;
+  display: inline-block;
+}
+
+input[type=submit] {
+  background-color: #4CAF50;
   color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-top: 10px !important;
+  width: 100px;
 }
 
-.App-link {
-  color: #61dafb;
+input[type=submit]:hover {
+  background-color: #45a049;
 }
 
-.App-table {
-  fontFamily: "-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif";
-  margin: "auto";
-  maxWidth: "100px";
-  padding: "1em"; 
+.container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  margin: auto;
+  width: 80%;
+  padding: 10px;
+  max-width: 600px;
+
+}
+
+.col-25 {
+  float: left;
+  width: 30%;
+  margin-top: 6px;
+}
+
+.col-75 {
+  float: left;
+  width: 70%;
+  margin-top: 6px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .col-25, .col-75, input[type=submit] {
+    width: 100%;
+    margin-top: 0;
+  }
+}
+
+.hidden-label {
+  visibility: hidden;
+  height: 0;
+}
+
+.error-label {
+  color: red;
+  font-size: calc(2px + 2vmin);
 }
