--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@ label {
   display: inline-block;
 }
 
-input[type=submit] {
+input[type=submit],button {
   background-color: #4CAF50;
   color: white;
   padding: 12px 20px;
@@ -40,7 +40,7 @@ input[type=submit] {
   width: 100px;
 }
 
-input[type=submit]:hover {
+input[type=submit]:hover, button {
   background-color: #45a049;
 }
 
