--- a/src/App.css
+++ b/src/App.css
@@ -10,11 +10,14 @@
   font-size: calc(12px + 2vmin);
   color: rgba(255, 255, 255, 0.87);
   font-family: "Gill Sans", sans-serif;
+
 }
 
 
 * {
   box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
 }
 
 input[type=text],input[type=password], select, textarea {
@@ -49,12 +52,24 @@ input[type=submit]:hover, button:hover {
 
 }
 
+.logo{
+  text-align: center;
+  max-width: 600px;
+  margin: auto;
+  margin-bottom: 0px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
 .container{
   border-radius: 5px;
   background-color: rgba(255,255,255,0.16);
   margin: auto;
   width: 80%;
-  padding: 10px;
+  padding-top: 0px;
+  padding-bottom: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
   max-width: 600px;
 
 }
